--- a/pyhack.ipynb
+++ b/pyhack.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "pyhack.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNSrIpKqXxmGWTcqE1KQ/L0",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/faiyazfab/pyhack/blob/main/pyhack.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -22,7 +34,7 @@
         "import requests\r\n",
         "import certifi\r\n",
         "import json\r\n",
-        "import pandas as pd\r\n"
+        "import pandas as pd"
       ],
       "execution_count": 1,
       "outputs": []
@@ -110,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9JvRk70ZYPdC",
-        "outputId": "c8667d20-f777-4a0a-90b2-f223f538436f"
+        "outputId": "acee86a3-efb6-41c8-b9f5-f8be0a0ed407"
       },
       "source": [
         "for i in range(2):\r\n",
@@ -119,6 +131,7 @@
         "  per_record = pd.DataFrame(response_cm_data['data'])\r\n",
         "  #type1\r\n",
         "  type1 = per_record[per_record['cmprior']=='YES'][['subjectid','formidx','formname','formid']]\r\n",
+        "  print(\"____________________________________________type 1____________________________________________________\")\r\n",
         "  for j in range(len(type1)):\r\n",
         "            formid = list(type1['formid'])[j]\r\n",
         "            formidx = list(type1['formidx'])[j]\r\n",
@@ -139,11 +152,12 @@
         "    \r\n",
         "  #Type2\r\n",
         "  type2 = per_record[per_record['cmaeno']!='0'][['subjectid','formidx','formname','formid']]\r\n",
+        "  print(\"____________________________________________type 2____________________________________________________\")\r\n",
         "  for q in range(len(type2)):\r\n",
-        "            formid = list(type1['formid'])[q]\r\n",
-        "            formidx = list(type1['formidx'])[q]\r\n",
-        "            formname = list(type1['formname'])[q]\r\n",
-        "            subjectid = list(type1['subjectid'])[q]\r\n",
+        "            formid = list(type2['formid'])[q]\r\n",
+        "            formidx = list(type2['formidx'])[q]\r\n",
+        "            formname = list(type2['formname'])[q]\r\n",
+        "            subjectid = list(type2['subjectid'])[q]\r\n",
         "            print(formidx,subjectid,formname,formid)\r\n",
         "            postReq={\r\n",
         "                  \"email_address\": \"faiyazfab5800@gmail.com\",\r\n",
@@ -153,16 +167,17 @@
         "                  \"type\": \"TYPE1\",\r\n",
         "                  \"subjectid\": \"str(data)\"\r\n",
         "                    }\r\n",
-        "            post=requests.post('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/query', data = postReq)\r\n",
-        "            print(post)\r\n",
+        "            post2=requests.post('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/query', data = postReq)\r\n",
+        "            print(post2)\r\n",
         "  #type4\r\n",
-        "  type4 = per_record_ae[['subjectid','formidx','formname','formid','cmtrt']]\r\n",
+        "  type4 = per_record[['cmtrt','subjectid','formidx','formname','formid']]\r\n",
+        "  print(\"____________________________________________type 4____________________________________________________\")\r\n",
         "  for e in range(len(type4)-1):\r\n",
-        "      if (list(per_record_ae['cmtrt'])[w] == list(per_record_ae['cmtrt'])[w+1]):\r\n",
-        "            formid = list(type1['formid'])[e]\r\n",
-        "            formidx = list(type1['formidx'])[e]\r\n",
-        "            formname = list(type1['formname'])[e]\r\n",
-        "            subjectid = list(type1['subjectid'])[e]\r\n",
+        "      if (list(per_record['cmtrt'])[e] == list(per_record['cmtrt'])[e+1]):\r\n",
+        "            formid = list(type4['formid'])[e]\r\n",
+        "            formidx = list(type4['formidx'])[e]\r\n",
+        "            formname = list(type4['formname'])[e]\r\n",
+        "            subjectid = list(type4['subjectid'])[e]\r\n",
         "            print(formidx,subjectid,formname,formid)\r\n",
         "            postReq={\r\n",
         "                  \"email_address\": \"faiyazfab5800@gmail.com\",\r\n",
@@ -172,14 +187,15 @@
         "                  \"type\": \"TYPE1\",\r\n",
         "                  \"subjectid\": \"str(data)\"\r\n",
         "                    }\r\n",
-        "            post3=requests.post('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/query', data = postReq)\r\n",
-        "            print(post3)"
+        "            post4=requests.post('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/query', data = postReq)\r\n",
+        "            print(post4)"
       ],
-      "execution_count": 9,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "____________________________________________type 1____________________________________________________\n",
             "1 76809 CM201 38623\n",
             "<Response [500]>\n",
             "2 76809 CM201 38623\n",
@@ -216,6 +232,7 @@
             "<Response [500]>\n",
             "42 76809 CM201 38623\n",
             "<Response [500]>\n",
+            "____________________________________________type 2____________________________________________________\n",
             "76 76809 CM201 38623\n",
             "<Response [500]>\n",
             "77 76809 CM201 38623\n",
@@ -414,6 +431,22 @@
             "<Response [500]>\n",
             "75 76809 CM201 38623\n",
             "<Response [500]>\n",
+            "____________________________________________type 4____________________________________________________\n",
+            "87 76809 CM201 38623\n",
+            "<Response [500]>\n",
+            "503 76809 CM201 38623\n",
+            "<Response [500]>\n",
+            "3 76809 CM201_3 32993\n",
+            "<Response [500]>\n",
+            "5 76809 CM201_3 32993\n",
+            "<Response [500]>\n",
+            "6 76809 CM201_3 32993\n",
+            "<Response [500]>\n",
+            "43 76809 CM201 38623\n",
+            "<Response [500]>\n",
+            "72 76809 CM201 38623\n",
+            "<Response [500]>\n",
+            "____________________________________________type 1____________________________________________________\n",
             "3 130301 CM201 38623\n",
             "<Response [500]>\n",
             "4 130301 CM201 38623\n",
@@ -432,6 +465,7 @@
             "<Response [500]>\n",
             "32 130301 CM201 38623\n",
             "<Response [500]>\n",
+            "____________________________________________type 2____________________________________________________\n",
             "1 130301 CM201_3 32993\n",
             "<Response [500]>\n",
             "2 130301 CM201_3 32993\n",
@@ -565,6 +599,37 @@
             "89 130301 CM201 38623\n",
             "<Response [500]>\n",
             "90 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "____________________________________________type 4____________________________________________________\n",
+            "18 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "35 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "38 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "40 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "42 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "43 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "71 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "77 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "78 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "79 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "82 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "85 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "87 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "88 130301 CM201 38623\n",
+            "<Response [500]>\n",
+            "89 130301 CM201 38623\n",
             "<Response [500]>\n"
           ],
           "name": "stdout"
@@ -677,60 +742,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4vHGBoDjlYQq"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "x7jyH7lnPrnT"
-      },
-      "source": [
-        "for i in range(2):\r\n",
-        "  response_ae_data =requests.get('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/ae/subject/{}/list'.format(d['data'][i]))\r\n",
-        "  response_ae_data = response_ae_data.json()\r\n",
-        "  per_record = pd.DataFrame(response_ae_data['data'])\r\n",
-        "  print(\"___________________________________________subject_id:{}___________________________________________ \".format(i))\r\n",
-        "  print(per_record)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "h_r6JfneDtB7"
-      },
-      "source": [
-        "for j in range(2):\r\n",
-        "  response_cm_data =requests.get('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/cm/subject/{}/list'.format(d['data'][721]))\r\n",
-        "  response_cm_data = response_cm_data.json()\r\n",
-        "  per_record = pd.DataFrame(response_cm_data['data'])\r\n",
-        "  print(\"___________________________________________subject_id:{}___________________________________________ \".format(j))\r\n",
-        "  print(per_record)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vWDHDV-_U2HK"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
