--- a/pyhack.ipynb
+++ b/pyhack.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pyhack.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSrIpKqXxmGWTcqE1KQ/L0",
+      "authorship_tag": "ABX9TyNcj1I7BZrkWjaPNBZvsqYN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,7 +125,7 @@
         "outputId": "acee86a3-efb6-41c8-b9f5-f8be0a0ed407"
       },
       "source": [
-        "for i in range(2):\r\n",
+        "for i in range(dd):\r\n",
         "  response_cm_data =requests.get('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/cm/subject/{}/list'.format(dd['data'][i]))\r\n",
         "  response_cm_data = response_cm_data.json()\r\n",
         "  per_record = pd.DataFrame(response_cm_data['data'])\r\n",
@@ -655,7 +655,7 @@
         "outputId": "ab8f4997-f43a-46ce-82d6-41b9a4189ef1"
       },
       "source": [
-        "for i in range(2):\r\n",
+        "for i in range(d):\r\n",
         "  response_ae_data =requests.get('https://pyhack-dot-pharmanlp-177020.uc.r.appspot.com/api/1/StudyHack/ae/subject/{}/list'.format(d['data'][i]))\r\n",
         "  response_ae_data = response_ae_data.json()\r\n",
         "  per_record_ae = pd.DataFrame(response_ae_data['data'])\r\n",
